Fixes window resizing overlap on nav bar

--- a/miniproject1.css
+++ b/miniproject1.css
@@ -5,7 +5,7 @@ html> <style>*/
 	text-align: center;
 }
 
-@media only screen and (min-width: 1100px){
+@media only screen and (min-width: 1300px){
 	.title {
 		font-family: "Playfair Display";
 		letter-spacing: 10px;
@@ -46,7 +46,7 @@ html> <style>*/
 }
 
 @media only screen and 
-(max-width: 1099px) and
+(max-width: 1299px) and
 (min-width: 800px){
 	.title {
 		font-family: "Playfair Display";
@@ -79,7 +79,7 @@ html> <style>*/
 		width: 100%;
 		z-index: -1;
 		top: 0;
-		font-size: 14pt;
+		font-size: 12pt;
 		font-family: "Playfair Display";
 		color: darkred;
 		letter-spacing: 3px;
@@ -187,6 +187,17 @@ html> <style>*/
 		font-size: 20pt;
 		color: darkred;
 		position: -webkit-sticky;
+		position: sticky;
+		top: 15px;
+		z-index: 1;
+	}
+		.title {
+		font-family: "Playfair Display";
+		letter-spacing: 2px;
+		text-align: center;
+		font-size: 30pt;
+		color: darkred;
+		/* position: -webkit-sticky; */
 		position: sticky;
 		top: 15px;
 		z-index: 1;
